[workspace]
members = [
    "src/ledger",
    "src/components/finutils",
    "src/components/abciapp",
    "src/components/config",
]
resolver = "2"

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = 'abort'
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
incremental = false
overflow-checks = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
codegen-units = 1
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 2
lto = "off"
incremental = true
debug-assertions = true
debug = true
